tests/snapshots/cli__reference_files@assignment__associativity.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/assignment/associativity.lox
---
status: 0
stdout:
  - c
  - c
  - c
stderr: []
