tests/snapshots/cli__reference_files@assignment__global.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/assignment/global.lox
---
status: 0
stdout:
  - before
  - after
  - arg
  - arg
stderr: []
