tests/snapshots/cli__reference_files@assignment__grouping.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/assignment/grouping.lox
---
status: 65
stdout: []
stderr:
  - "[line 2] Error at '=': Invalid assignment target."
