tests/snapshots/cli__reference_files@assignment__infix_operator.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/assignment/infix_operator.lox
---
status: 65
stdout: []
stderr:
  - "[line 3] Error at '=': Invalid assignment target."
