tests/snapshots/cli__reference_files@assignment__local.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/assignment/local.lox
---
status: 0
stdout:
  - before
  - after
  - arg
  - arg
stderr: []
