tests/snapshots/cli__reference_files@assignment__syntax.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/assignment/syntax.lox
---
status: 0
stdout:
  - var
  - var
stderr: []
